feat: return utxos as metadata when querying for account balance
