# src/server/services/account-service.ts
@@ -41,12 +41,12 @@ const configure = (networkRepository: NetworkRepository, blockService: BlockServ
                   issuer: accountAddress.address
                 }
               },
-              // FIXME fastify is filtering metadata https://github.com/input-output-hk/cardano-rosetta/issues/43
-              metadata: { utxo_details: details }
+              metadata: {}
             }
           ],
           metadata: {
-            sequence_number: 23
+            // FIXME fastify is filtering metadata https://github.com/input-output-hk/cardano-rosetta/issues/43
+            utxos: details
           }
         };
       }
